syntax = "proto3";

package saga;

service OrchestratorService {
  rpc StartSaga (StartSagaRequest) returns (StartSagaResponse);
}

message StartSagaRequest {
  string orderId = 1;
}

message StartSagaResponse {
  string status = 1;
}
